fix scrollbar jitters

--- a/scss/_c-header.scss
+++ b/scss/_c-header.scss
@@ -5,6 +5,7 @@
    ========================================================================== */
 
 .c-header {
+  margin-left: calc(100vw - 100%);
   position: fixed;
   left: 0;
   right: 0;
